adds basic operations and clear functionality

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
     flex-shrink: 1;
     flex-basis: calc(var(--calculator-width) / 5);
     
-    
     height: calc((var(--calculator-height) - var(--display-height) - 5*var(--buttons-flex-container-gap) - 2*var(--body-padding)) / 5);
     border: 2px solid #ccc;
     padding: 0.5rem;
@@ -38,9 +37,10 @@ body {
 }
 
 .button:hover {
+    border: 2px solid hsl(205, 100%, 50%);
+    
     cursor: pointer;
     background-color: hsl(205, 100%, 75%);
-    border: 2px solid hsl(205, 100%, 50%);
 }
 
 .button-white {
@@ -59,22 +59,35 @@ body {
 }
 
 #calculator-body {
-    background-color: #bbb;
+    position: relative;
+
     height: var(--calculator-height);
     width: var(--calculator-width);
     padding: var(--body-padding);
+
     font-size: 1rem;
     font-weight: bold;
+    background-color: #bbb;
 }
 
-#calculator-display {
+#result-display {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    /* background-color: red; */
+
     height: var(--display-height);
+
     text-align: right;
     font-size: 3rem;
+}
+
+#expression-display {
+    position: absolute;
+    top: 0;
+    right: 0;
+    
+    font-size: 1rem;
+    color: #555;
 }
 
 #buttons-flex-container {
