--- a/styles.css
+++ b/styles.css
@@ -82,15 +82,17 @@ body {
     align-items: center;
 
     height: var(--display-height);
+    padding: 0.25rem;
 
     text-align: right;
     font-size: 1.9rem;
+    background-color: #999;
 }
 
 #expression-display {
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    top: 0.75rem;
+    right: 0.75rem;
     
     font-size: 1rem;
     color: #555;
